[package]
name = "ssa-magnet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.11"
scraper = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
futures = "0.3"

[profile.release]
lto = "thin"
strip = true
